syntax = "proto3";

package userservice;

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

message MutationReply {
  bool result = 1;
}

message User {
  string email = 1;
  int64 createdAt = 15;
}

message Token {
  string accessToken = 1;
  int64 expiresIn = 15;
}

message SignupRequest {
  string email = 1;
  string password = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginReply {
  Token token = 1;
}

message ProfileReply {
  User user = 1;
  int32 postCount = 2;
}

message UnregisterRequest {
  string token = 1;
}

service UserService {
  rpc Signup (SignupRequest) returns (MutationReply) {
    option (google.api.http) = {
      post: "/users"
      body: "*"
    };
  }

  rpc Login (LoginRequest) returns (LoginReply) {
    option (google.api.http) = {
      post: "/tokens"
      body: "*"
    };
  }

  rpc Profile (google.protobuf.Empty) returns (ProfileReply) {
    option (google.api.http).get = "/me";
  }

  rpc Unregister (UnregisterRequest) returns (MutationReply) {
    option (google.api.http) = {
      delete: "/users"
      body: "*"
    };
  }

}
